<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    android:paddingBottom="@dimen/elements_margin"
    tools:context="co.elisavet.exallosinglescreen.MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/exallo_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/elements_margin"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />

        <TextView
            style="@style/Headings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_exallo" />

        <TextView
            style="@style/MainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_description" />

        <TextView
            style="@style/MainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_philosophy" />

        <TextView
            style="@style/Headings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/products" />

        <TextView
            style="@style/Headings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mens_wooden_bow_ties" />

        <ImageView
            android:id="@+id/mens_wooden_bow_ties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/elements_margin"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/menbowties" />

        <Button
            android:id="@+id/mens_wooden_bow_ties_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/elements_margin"
            android:onClick="buttonPress"
            android:text="@string/view_more_mens_wooden_bow_ties" />

        <TextView
            style="@style/Headings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kids_wooden_bow_ties" />

        <ImageView
            android:id="@+id/kids_wooden_bow_ties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/elements_margin"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/kidsbowties" />

        <Button
            android:id="@+id/kids_wooden_bow_ties_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/elements_margin"
            android:onClick="buttonPress"
            android:text="@string/view_more_kids_wooden_bow_ties" />

        <TextView
            style="@style/Headings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wooden_cuff_links" />

        <ImageView
            android:id="@+id/wooden_cuff_links"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/elements_margin"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/cufflinks" />

        <Button
            android:id="@+id/wooden_cuff_links_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/elements_margin"
            android:onClick="buttonPress"
            android:text="@string/view_more_wooden_cuff_links" />

        <TextView
            style="@style/Headings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wooden_phone_cases" />

        <ImageView
            android:id="@+id/wooden_phone_cases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/phonecases" />

        <Button
            android:id="@+id/wooden_phone_cases_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/elements_margin"
            android:onClick="buttonPress"
            android:text="@string/view_more_wooden_phone_cases" />

        <TextView
            style="@style/Headings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wedding_package" />

        <ImageView
            android:id="@+id/wending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/elements_margin"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/wedding" />

        <Button
            android:id="@+id/wooden_wedding_packages_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/elements_margin"
            android:onClick="buttonPress"
            android:text="@string/learn_more_about_our_wedding_packages" />

        <TextView
            style="@style/Headings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meet_the_makers" />

        <LinearLayout
            android:id="@+id/linear_layout_makers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linear_layout_maker1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/leonidas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/elements_margin"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/leonidas" />

                <TextView
                    style="@style/Headings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/leonidas_souras" />

                <TextView
                    style="@style/MainText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/leonidas_description" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_maker2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/babis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/elements_margin"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/babis" />

                <TextView
                    style="@style/Headings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/babis_souras" />

                <TextView
                    style="@style/MainText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/babis_description" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/Headings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_us" />


        <TextView
            style="@style/MainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/workshop_location" />

        <TextView
            style="@style/MainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:text="@string/email" />

        <TextView
            style="@style/MainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:text="@string/phone" />

        <TextView
            style="@style/MainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/website" />


    </LinearLayout>
</ScrollView>